# codingAgent

./: .gitignore  Makefile  README.md
backend/: .env.example  requirements.txt
backend/app/: db.py  main.py  models.py
backend/app/api/: agent_gateway.py  agent_schemas.py  auth.py  data_routes.py  routes.py  schemas.py
backend/app/core/: config.py
backend/app/mcp/: __init__.py  routes.py  server.py
backend/app/repositories/: agent_repo.py  context_repo.py
backend/app/services/: agent_runner.py  agent_service.py  auth_service.py  context_service.py  data_agent_service.py  data_service.py  invite_mail_service.py  llm_service.py  (+9 more)
backend/tests/: test_agent_service.py  test_auth_tenant_service.py  test_context_service.py  test_deep_agent_phase2.py  test_deep_agent_service.py  test_invite_mail_service.py  test_memory_service.py  test_multimodal_service.py  test_project_context_service.py
docs/: CONTEXT_LAYER_PLAN.md  DEEP_AGENT_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PROJECT_WIDE_CONTEXT_PLAN.md
extension/: package.json
extension/src/: extension.ts
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
scripts/: build_context.py  build_project_context.py  index_repo.py
sdk/: pyproject.toml
sdk/datatoai/: __init__.py  client.py
sql/: init_oceanbase.sql
sql/migrations/: 20260302_memory_optimization.sql  20260303_auth_tenant_invitations.sql  20260303_auth_tenant_isolation.sql  20260303_deep_agent_runtime.sql  20260303_project_graph_vectors.sql  20260305_data_agent_tables.sql
(+35 files in other folders)
