[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datatoai"
version = "0.1.0"
description = "Python SDK for the dataToAi agent — invoke data analysis skills from your own agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[tool.setuptools.packages.find]
include = ["datatoai*"]
